zeon-dev/dashboard/ingress-dashboard.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard-ingress
  namespace: kubernetes-dashboard
  annotations:
    # Указываем, что рендерить через nginx-ingress
    kubernetes.io/ingress.class: "nginx"
    # Подключаемся к бэкенду по HTTPS (порт 443)
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
  - host: zeon-dev-dashboard.project.client.loc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubernetes-dashboard-kong-proxy
            port:
              number: 443
